--- a/hello-world/resources/css/app.css
+++ b/hello-world/resources/css/app.css
@@ -29,6 +29,37 @@ a {
   text-decoration: none;
 }
 
+.deleteButton {
+  background-color: red;
+}
+
+input[type='submit'] {
+  width: 100%;
+  border-radius: 5px;
+  color: white;
+  padding: 5px;
+  border: none;
+  background-color: #5a45ff;
+}
+
+input {
+  outline: none;
+  border: hidden;
+  padding: 10px;
+}
+
+#deleteButton {
+  background-color: rgba(247, 0, 0, 0.753);
+}
+
+.InputId {
+  visibility: hidden;
+}
+
+input[type='submit']:hover {
+  cursor: pointer;
+}
+
 main {
   max-width: 620px;
   margin: auto;
@@ -36,6 +67,7 @@ main {
   padding: 0 30px;
   align-items: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
